--- a/skeleton/templates/todo.html
+++ b/skeleton/templates/todo.html
@@ -5,20 +5,6 @@
         <script src="/static/backbone-min.js"></script>
         <script src="/static/script.js"></script>
         <style>
-
-            .primary-1 { background-color: #BE9246 }
-            .primary-2 { background-color: #977B4B }
-            .primary-3 { background-color: #87601E }
-            .primary-4 { background-color: #E3BD7D }
-            .primary-5 { background-color: #E3C99D }
-
-            .complement-1 { background-color: #36527D }
-            .complement-2 { background-color: #364964 }
-            .complement-3 { background-color: #173259 }
-            .complement-4 { background-color: #7596C7 }
-            .complement-5 { background-color: #8FA5C7 }
-
-
             body {
                 background-color: #87601E;
                 color: #364964;
@@ -58,11 +44,6 @@
             div.list span.delete{
                 float: right;
             }
-
-
-
-
-
         </style>
     </head>
     <body>
@@ -70,16 +51,9 @@
             <div class="list">
                 <div class="contents">
                 </div>
-                <input type="text"></input>
+                <input type="text"/>
                 <Button>+</button>
             </div>
-
-
         </div>
-
-
     </body>
-
-
-
 </html>
